infrastructure/k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: sapz-backend-service
  namespace: sapz-prod
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: sapz-backend
