infrastructure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sapz-platform-ingress
  namespace: sapz-prod
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - api.sapz.gov.ng
    - portal.sapz.gov.ng
    secretName: sapz-tls-secret
  rules:
  - host: api.sapz.gov.ng
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sapz-backend-service
            port:
              number: 8000
